# Clearance

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  DEVELOPMENT.md  docker-compose.yml  skills-lock.json
.github/workflows/: ci-cd.yml  integration.yml
client/: index.html  package-lock.json  package.json
client/src/: index.css
client/src/components/: DxfPreviewGrid.tsx  DxfPreviewLightbox.tsx  ExtractionStatusPill.tsx
client/src/pages/: ForbiddenPage.tsx  HomePage.tsx  LoginPage.tsx  ProjectDetailPage.tsx
docs/superpowers/plans/: 2026-04-20-buildcheck-phase-1b-client-auth.md  2026-04-20-buildcheck-phase-2-projects-storage.md  2026-04-20-buildcheck-phase-3-jobs-infrastructure.md  2026-04-20-buildcheck-phase-4a-sidecar-upload-explore.md  (+2 more)
server/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.dockerignore  eslint.config.mjs  jest.config.js  jest.integration.config.js  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.integration.test.ts  app.ts  index.ts
sidecar/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
sidecar/.github/workflows/: ci.yml
sidecar/app/: dxf_explorer.py  dxf_sheet_renderer.py  hashing.py  logging_config.py  main.py
sidecar/tests/: conftest.py  test_dxf_explorer.py  test_dxf_sheet_renderer.py  test_execute_endpoint.py  test_explore_endpoint.py  test_health.py  test_path_sandbox.py  test_render_thumbnails_endpoint.py
sidecar/tests/fixtures/: build_fixture.py  small_test.dxf
(+170 files in other folders)
