[project]
name = "clearance-sidecar"
version = "0.1.0"
description = "BuildCheck Python sidecar — FastAPI service for DXF exploration + execution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "ezdxf>=1.3,<2.0",
    "pydantic>=2.9,<3.0",
    "structlog>=24.4,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.30",
    "httpx>=0.27,<0.30",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
